--- a/GestaoEscolar/GestaoEscolar.csproj
+++ b/GestaoEscolar/GestaoEscolar.csproj
@@ -64,6 +64,12 @@
     <Compile Include="FormLogin.Designer.cs">
       <DependentUpon>FormLogin.cs</DependentUpon>
     </Compile>
+    <Compile Include="FormTelaAtividade.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="FormTelaAtividade.Designer.cs">
+      <DependentUpon>FormTelaAtividade.cs</DependentUpon>
+    </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <EmbeddedResource Include="FormCadastroAtividade.resx">
@@ -74,6 +80,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="FormLogin.resx">
       <DependentUpon>FormLogin.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="FormTelaAtividade.resx">
+      <DependentUpon>FormTelaAtividade.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
